# spark_isaac_mycobot_v3

./: .gitignore  CHANGES.md  LICENSE  README.md  REFERENCES.md  STATUS.md  pyproject.toml  spark_isaac_mycobot_v3.code-workspace  spec.md
config/: app.yml  benchmark_workspace.yml  phase7_1_cube_suite.yml  phase7_1_cube_suite_50.yml  phase7_2_multi_target.yml  phase7_2_multi_target_grid.yml  phase7_2_multi_target_integration_2x5.yml  phase7_2_multi_target_manual.yml  phase7_2_multi_target_standard_2x10.yml  phase7_2_multi_target_standard_2x20.yml  phase7_3_multi_target_layout_arc.yml  phase7_3_multi_target_layout_rows.yml  phase7_3_multi_target_random.yml  planner_profiles.yml  residual_safety.yml  validation_profiles.yml
docs/: implementation_phases.md  last_prompt.md  phase0_environment.md  phase1_1_target_scale_collision_spheres.md  phase1_robot_model.md  phase2_task_frames.md  phase3_nominal_planning.md  phase4_validation.md  phase5_execution_residual.md  phase6_benchmark.md  phase7_1_cube_approach.md  phase7_2_multi_target_contact.md  phase7_3_target_placement.md  phase7_isaac_sim.md  phase9_1_tool_evaluation.md  phase9_contact_tool.md  v2_retirement.md
isaac_lab/: detect_isaac_lab.py  versions.env
isaac_sim/: __init__.py  articulation_playback.py  contact_monitor.py  convert_urdf_to_usd.py  joint_drives.py  plan_cube_suite.py  plan_multi_target_suite.py  play_cube_suite.py  play_multi_target_suite.py  play_nominal_plan.py  scene_setup.py  sim_metrics.py  tip_body_contact.py  urdf_import.py  urdf_utils.py
scripts/: benchmark_random_targets.py  isaac_sim_env.sh  (+9 more)
(+112 files in other folders)
